# ReNOS

./: .gitignore  CMakeLists.txt  README  README.md  array_job_lem.sh  convergence_plots.ipynb  godot_script.sh  graph.py  install.py  merge_batch_csvs.py  optimizers.py  package-lock.json  requirments.txt  run_aco.sh  setup.py  test_lem.sh
config_examples/: best_solution.json  dump0.json  dump1.json  dump10.json  dump11.json  dump13.json  dump2.json  dump3.json  dump4.json  dump5.json  dump6.json  dump69.json  dump7.json  dump8.json  dump9.json  dump_.json  dump_0.json  dump_GA69.json  dump_GA95.json  stucked.json  stucked_2.json  test_1.json  test_batch_dynamic.json  test_run.json  test_run1.json  test_run2.json  test_run3.json  test_run4.json  test_run5.json  watch_list
config_files/: arch.json
data/ACO/: best_solution.json  statistics.npy
data/ACO_1/: best_solution.json  statistics.npy
network/src/: CMakeLists.txt  node.cpp  node.hpp  packet.cpp  packet.hpp  params.hpp  utilities.cpp  utilities.hpp
network/tests/: CMakeLists.txt  test_node.cpp  test_utilities.cpp
notebooks/: Layer_comparisons.ipynb  Model_comparison.ipynb  NoC_comparisons.ipynb  Partitioner_comparisons.ipynb  Splitting_factors_search_space.ipynb  convergence_plots.ipynb  fitting_curve.ipynb  monte_carlo_convergence.ipynb  performance_comparison.ipynb  plotting_utils.py  resources_imshow.ipynb  spatial_strat_comparison.ipynb  test.py
restart/config_examples/: dump.json  dump12.json  dump13.json  dump3.json  dump4.json  dump5.json  dump6.json  dump7.json  dump8.json  dump_1.json  dump_GA19.json  dump_GA77.json  dump_GA94.json  mapping.json  test.json  test_batch_dynamic.json  test_run1.json  test_run3.json  test_run4.json  test_run5.json  test_run6.json
restart/src/: CMakeLists.txt  batchtrafficmanager.hpp  booksim_config.hpp  buffer.hpp  buffer_state.hpp  channel.cpp  channel.hpp  injection.cpp  misc_utils.cpp  outset.cpp  packet.hpp  packet_reply_info.cpp  params.hpp  random_utils.cpp  random_utils.hpp  routefunc.cpp  routefunc.hpp  simulation_bindings.cpp  stats.cpp  vc.hpp
restart/src/allocators/: CMakeLists.txt  allocator.hpp  islip.cpp  selalloc.cpp  separable_input_first.cpp  wavefront.cpp
restart/src/arbiters/: arbiter.cpp  arbiter.hpp  prio_arb.hpp
restart/src/graph/: node.cpp  node.hpp  router.cpp  router.hpp  utilities.cpp
restart/src/networks/: anynet.cpp  anynet.hpp  cmesh.cpp  dragonfly.cpp  dragonfly.hpp  fattree.cpp  fattree.hpp  network.hpp  tree4.cpp
restart/src/power/: CMakeLists.txt  buffer_monitor.cpp  switch_monitor.cpp  techfile.json
restart/src/routers/: chaos_router.cpp  chaos_router.hpp  event_router.cpp  event_router.hpp  iq_router.hpp  router.cpp  router.hpp
restart/tests/: CMakeLists.txt  config.json  test_config.cpp  test_injection.cpp  test_outset.cpp  test_traffic.cpp
restart/tests/graph/: test_node.cpp  test_packet.cpp  test_utilities.cpp
src/: CMakeLists.txt  NoC_analytical_model.py  analytical_simulator_stub.py  base.cpp  base.hpp  batchtrafficmanager.cpp  batchtrafficmanager.hpp  booksim_config.cpp  buffer.cpp  buffer.hpp  buffer_state.cpp  buffer_state.hpp  channel.cpp  channel.hpp  config.cpp  config.hpp  convergence_plot.py  dirs.py  domain.py  energy_estimator.py  fast_analytical_simulator_stub.py  globals.hpp  graph.py  injection.cpp  injection.hpp  latency_energy_analysis.py  logger.hpp  main.cpp  main.py  mapper.py  mapping.py  mapping_random.py  models.py  noc_comp.py  optimizers.py  outset.hpp  packet.cpp  packet.hpp  packet_reply_info.cpp  packet_reply_info.hpp  (+26 more)
src/allocators/: pim.cpp
src/analytical/: CMakeLists.txt
src/analytical/src/: analytical_model.cpp  analytical_model.hpp  main.cpp  simulation_bindings_anal.cpp  simulation_fun_anal.cpp  simulation_fun_anal.hpp
src/arbiters/: prio_arb.cpp  tree_arb.cpp
src/fast_analytical_model/: CMakeLists.txt  fast_bindings.cpp  fast_model.cpp  fast_model.h  main.cpp
src/graph/: utilities.hpp
src/networks/: CMakeLists.txt  anynet.cpp  anynet.hpp  cmesh.cpp  cmesh.hpp  dragonfly.cpp  dragonfly.hpp  fattree.cpp  flatfly_onchip.cpp  flatfly_onchip.hpp  fly.cpp  fly.hpp  kncube.cpp  network.cpp  network.hpp  qtree.cpp  qtree.hpp  tree4.cpp  tree4.hpp
src/power/: power_module.cpp  techfile.json
src/restart/: how_to_use.md
src/restart/src/: CMakeLists.txt  base.hpp  batchtrafficmanager.cpp  booksim_config.cpp  buffer.cpp  config.cpp  globals.hpp  injection.cpp  injection.hpp  logger.hpp  memory.cpp  memory.hpp  npu.cpp  npu.hpp  params.hpp  pipefifo.hpp  simulation_bindings.cpp  simulation_fun.hpp  stats.hpp  traffic.hpp  trafficmanager.cpp  trafficmanager.hpp
src/restart/src/allocators/: allocator.cpp  loa.cpp  maxsize.cpp  separable_output_first.cpp
src/restart/src/arbiters/: CMakeLists.txt
src/restart/src/networks/: CMakeLists.txt  flatfly_onchip.hpp  fly.cpp  kncube.hpp
src/restart/src/power/: CMakeLists.txt  power_module.cpp  power_module.hpp  techfile.json  techfile.txt
src/restart/src/routers/: CMakeLists.txt
src/routers/: chaos_router.cpp  chaos_router.hpp  event_router.cpp  event_router.hpp  iq_router.cpp  iq_router.hpp  router.cpp  router.hpp
src/utils/: aco_utils.py  ani_utils.py  ga_utils.py  model_fusion.py  partitioner_utils.py  plotting_utils.py  simulator_utils.py
tests/: config.json  test_base.cpp  test_channel.cpp  test_config.cpp
tests/graph/: test_router.cpp
utils/: ani_utils.py
